# ECE1373_assignment2

./: .gitignore  Makefile  README.md  acceleratorDummy_bd.tcl  acceleratorNoPartition_bd.tcl  accelerator_bd.tcl
8v3_shell/: Table.xlsx  acceleratorDummy_pr_pblock_pr_region_partial_clear.bit  acceleratorFlow_pr_pblock_pr_region_partial_clear.bit  acceleratorNoPartition_pr_pblock_pr_region_partial_clear.bit  accelerator_pr_pblock_pr_region_partial_clear.bit  create_pr2_0.tcl  nn_bd.tcl
conv_test/: conv_layer_test  conv_layer_test.cpp
fc_test/: fc_layer_test.cpp
hls_proj/: acceleratorDataFlow_directives.tcl  acceleratorDummy_hls.tcl  acceleratorNoPartitionAndParallel_directives.tcl  acceleratorPartitionAndParallel_directives.tcl  accelerator_hls.tcl  conv_basic.tcl  conv_dataflow.tcl  conv_partitionAndParallel.tcl
nn_params/: extractParams_imagenet.py  office_extractParams_imagenet.py  office_softMax.py
report/: refs.bib  (+3 more)
vgg_16/: CMakeLists.txt  config.cmake  functions.cmake
vgg_16/accelerator/: CMakeLists.txt  accelerator.cpp  accelerator.hpp  hw_accelerator.cpp
vgg_16/accelerator/simple_test/: CMakeLists.txt  simple_test.cpp
vgg_16/accelerator/test/: CMakeLists.txt  accelerator_test.cpp
vgg_16/common/: params.hpp  types.hpp  xaccelerator_hw.h
vgg_16/convLayer/: CMakeLists.txt  convLayer.cpp  convLayer.hpp
vgg_16/convLayer/test/: CMakeLists.txt  convLayer_test.cpp
vgg_16/shared/: CMakeLists.txt  shared.cpp  shared.hpp
vgg_16/utilities/: CMakeLists.txt  utilities.cpp  utilities.hpp
vgg_16/utilities/test/: CMakeLists.txt  utilities_test.cpp
(+32 files in other folders)
